unpackaged/main/default/objects/Activity/fields/Ac1__c.field-meta.xml
<CustomField>
    <fullName>Ac1__c</fullName>
    <label>Ac1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>