unpackaged/main/default/objects/Activity/fields/ac2__c.field-meta.xml
<CustomField>
    <fullName>ac2__c</fullName>
    <label>ac2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>