unpackaged/main/default/objects/Activity/fields/Auto_CI__c.field-meta.xml
<CustomField>
    <fullName>Auto_CI__c</fullName>
    <label>Auto CI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>