unpackaged/main/default/objects/Activity/fields/Ci_field2__c.field-meta.xml
<CustomField>
    <fullName>Ci_field2__c</fullName>
    <label>Ci field2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>