unpackaged/main/default/objects/Activity/fields/Ci_field3__c.field-meta.xml
<CustomField>
    <fullName>Ci_field3__c</fullName>
    <label>Ci field3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>