unpackaged/main/default/objects/Activity/fields/Ci_field__c.field-meta.xml
<CustomField>
    <fullName>Ci_field__c</fullName>
    <label>Ci field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>