unpackaged/main/default/objects/Activity/fields/debug__c.field-meta.xml
<CustomField>
    <fullName>debug__c</fullName>
    <label>debug</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>